; ModuleID = '/home/carl/AnghaBench/systemd/src/shared/extr_machine-pool.c_setup_machine_directory.c'
source_filename = "/home/carl/AnghaBench/systemd/src/shared/extr_machine-pool.c_setup_machine_directory.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [70 x i8] c"Failed to determine whether /var/lib/machines is located on btrfs: %m\00", align 1
@.str.1 = private unnamed_addr constant [18 x i8] c"/var/lib/machines\00", align 1
@.str.2 = private unnamed_addr constant [59 x i8] c"Failed to enable quota for /var/lib/machines, ignoring: %m\00", align 1
@.str.3 = private unnamed_addr constant [77 x i8] c"Failed to set up default quota hierarchy for /var/lib/machines, ignoring: %m\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @setup_machine_directory(i32* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  %5 = call i32 (...) @check_btrfs()
  store i32 %5, i32* %4, align 4
  %6 = load i32, i32* %4, align 4
  %7 = icmp slt i32 %6, 0
  br i1 %7, label %8, label %12

8:                                                ; preds = %1
  %9 = load i32*, i32** %3, align 8
  %10 = load i32, i32* %4, align 4
  %11 = call i32 @sd_bus_error_set_errnof(i32* %9, i32 %10, i8* getelementptr inbounds ([70 x i8], [70 x i8]* @.str, i64 0, i64 0))
  store i32 %11, i32* %2, align 4
  br label %32

12:                                               ; preds = %1
  %13 = load i32, i32* %4, align 4
  %14 = icmp eq i32 %13, 0
  br i1 %14, label %15, label %16

15:                                               ; preds = %12
  store i32 0, i32* %2, align 4
  br label %32

16:                                               ; preds = %12
  %17 = call i32 @btrfs_subvol_make_label(i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str.1, i64 0, i64 0))
  %18 = call i32 @btrfs_quota_enable(i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str.1, i64 0, i64 0), i32 1)
  store i32 %18, i32* %4, align 4
  %19 = load i32, i32* %4, align 4
  %20 = icmp slt i32 %19, 0
  br i1 %20, label %21, label %24

21:                                               ; preds = %16
  %22 = load i32, i32* %4, align 4
  %23 = call i32 @log_warning_errno(i32 %22, i8* getelementptr inbounds ([59 x i8], [59 x i8]* @.str.2, i64 0, i64 0))
  br label %24

24:                                               ; preds = %21, %16
  %25 = call i32 @btrfs_subvol_auto_qgroup(i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str.1, i64 0, i64 0), i32 0, i32 1)
  store i32 %25, i32* %4, align 4
  %26 = load i32, i32* %4, align 4
  %27 = icmp slt i32 %26, 0
  br i1 %27, label %28, label %31

28:                                               ; preds = %24
  %29 = load i32, i32* %4, align 4
  %30 = call i32 @log_warning_errno(i32 %29, i8* getelementptr inbounds ([77 x i8], [77 x i8]* @.str.3, i64 0, i64 0))
  br label %31

31:                                               ; preds = %28, %24
  store i32 1, i32* %2, align 4
  br label %32

32:                                               ; preds = %31, %15, %8
  %33 = load i32, i32* %2, align 4
  ret i32 %33
}

declare dso_local i32 @check_btrfs(...) #1

declare dso_local i32 @sd_bus_error_set_errnof(i32*, i32, i8*) #1

declare dso_local i32 @btrfs_subvol_make_label(i8*) #1

declare dso_local i32 @btrfs_quota_enable(i8*, i32) #1

declare dso_local i32 @log_warning_errno(i32, i8*) #1

declare dso_local i32 @btrfs_subvol_auto_qgroup(i8*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
